src/objects/joinapi__Step_Condition__c.object
<CustomObject>
    <description>This object is used to define the items and its attributes for the marketing and qualifying questions pages.</description>
    <fields>
        <fullName>joinapi__Button_Label__c</fullName>
        <description>Defines the label for the button displayed for the item.</description>
        <inlineHelpText>Defines the label for the button displayed for the item.</inlineHelpText>
        <label>Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__Description__c</fullName>
        <description>The description displayed for this item.</description>
        <inlineHelpText>The description displayed for this item.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>joinapi__Display_Name__c</fullName>
        <description>The name displayed to the end user on the marketing page.</description>
        <inlineHelpText>The name displayed to the end user on the marketing page.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Default_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies the item that will be selected for an item flow step if the user does not meet any of the dynamic item criteria.</description>
        <inlineHelpText>This field identifies the item that will be selected for an item flow step if the user does not meet any of the dynamic item criteria.</inlineHelpText>
        <label>Is Default Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Marketing_Item_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** Identifies this step condition as Item Group (Used in Marketing List)</description>
        <inlineHelpText>** System Calculated ** Identifies this step condition as Item Group (Used in Marketing List)</inlineHelpText>
        <label>Is Marketing Item Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Marketing_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies step condition as Marketing Item (Used in Marketing List)</description>
        <inlineHelpText>Identifies step condition as Marketing Item (Used in Marketing List)</inlineHelpText>
        <label>Is Marketing Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this the item is visible to end users.</description>
        <inlineHelpText>When checked this the item is visible to end users.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Item_Badge_Types_Filter__c</fullName>
        <description>User defined badge types.</description>
        <inlineHelpText>User defined badge types.</inlineHelpText>
        <label>Item Badge Types Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>joinapi__Item_Criteria__c</fullName>
        <description>** SYSTEM ** This field is used to define the criteria used to direct the end user to an item.</description>
        <inlineHelpText>** SYSTEM ** This field is used to define the criteria used to direct the end user to an item.</inlineHelpText>
        <label>Item Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>joinapi__Item_Group_Header__c</fullName>
        <description>Displays Item grouping header. See front end logic.</description>
        <inlineHelpText>Displays Item grouping header. See front end logic.</inlineHelpText>
        <label>Item Group Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Linked to the Item Group for this Item</description>
        <inlineHelpText>** System Calculated ** Linked to the Item Group for this Item</inlineHelpText>
        <label>Item Group</label>
        <referenceTo>joinapi__Step_Condition__c</referenceTo>
        <relationshipLabel>Step Conditions</relationshipLabel>
        <relationshipName>Step_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>joinapi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the item for the related step.</description>
        <inlineHelpText>Defines the item for the related step.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Step Conditions</relationshipLabel>
        <relationshipName>Step_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>joinapi__Next_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the step that is redirected after you choose this item</description>
        <inlineHelpText>This is the step that is redirected after you choose this item</inlineHelpText>
        <label>Next Step</label>
        <referenceTo>joinapi__Step__c</referenceTo>
        <relationshipLabel>Step Conditions (Next Step)</relationshipLabel>
        <relationshipName>Step_Conditions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>joinapi__Order__c</fullName>
        <description>Defines the order items are displayed for marketing steps.</description>
        <inlineHelpText>Defines the order items are displayed for marketing steps.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>joinapi__Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the step condition to a step.</description>
        <inlineHelpText>Relates the step condition to a step.</inlineHelpText>
        <label>Step</label>
        <referenceTo>joinapi__Step__c</referenceTo>
        <relationshipLabel>Step Conditions</relationshipLabel>
        <relationshipName>Step_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Step Condition</label>
    <listViews>
        <fullName>joinapi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Step Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>